--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pokemon-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cristhian-fernandez.github.io/pokemon-app",
+  "homepage": "https://cristhian-fernandez.github.io/Pokemon-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
